--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^3.6.0",
     "dompurify": "^3.1.6",
     "flowbite-react": "^0.10.1",
+    "goober": "^2.1.14",
     "html-react-parser": "^5.1.12",
     "jsdom": "^24.1.1",
     "lucide-react": "^0.416.0",
