--- a/public/data/project.json
+++ b/public/data/project.json
@@ -21,7 +21,7 @@
     "category": "Qrcode",
     "location": "Myanmar ICT Solutions",
     "website_url": "https://mmqrcodegenerator.com",
-    "gitlink": "https://github.com/Newstein123/mmqrgenerator"
+    "gitlink": "Not Provided"
   },
   {
     "id": 2,
@@ -31,7 +31,7 @@
     "project_img": {
       "main": "/image/projects/mmchatai/main.png",
       "imageone": "/image/projects/mmchatai/imageone.png",
-      "imagetwo": "/image/projects/mmchatai/imagetwo.png"
+      "imagetwo": "Not Provided"
     },
     "project_desc": "MMChatAi is a fascinating project that leverages various technologies to enable human-like conversation in both Myanmar and English languages. Integrating ChatGPT API with Google Translate is a clever approach to handling multilingual conversations. However, if the system struggles with text streamlining compared to a real ChatGPT, it may be worth exploring further optimization techniques or refining the integration to enhance the user experience.With over a thousand daily users, MMChatAi seems to be making a significant impact, especially in Myanmar where access to advanced language processing technologies might be limited. Continuous improvement and user feedback will likely be crucial in refining the system and making it even more effective over time.",
     "project_tech": [
@@ -52,7 +52,7 @@
     "category": "Artificial Intelligence",
     "location": "Myanmar ICT Solutions",
     "website_url": "https://chat.myanmarictsolutions.pro",
-    "gitlink": "https://github.com/Newstein123/mmchatai"
+    "gitlink": "Not Provided"
   },
   {
     "id": 3,
@@ -84,7 +84,7 @@
     "category": "Finance",
     "location": "Myanmar ICT Solutions",
     "website_url": "https://trade-mm.com",
-    "gitlink": "https://github.com/Newstein123/coinbankkr"
+    "gitlink": "Not Provided"
   },
   {
     "id": 5,
@@ -132,7 +132,7 @@
     "category": "Qrcode",
     "location": "Myanmar ICT Solutions",
     "website_url": "https://fsd.gov.mm.com/products",
-    "gitlink": "https://github.com/Newstein123/fireqr"
+    "gitlink": "Not Provided"
   },
   {
     "id": 13,
@@ -255,8 +255,8 @@
     "date": "01-10-2023",
     "category": "Media",
     "location": "Myanmar ICT Solutions",
-    "website_url": "",
-    "gitlink": ""
+    "website_url": "Not Provided",
+    "gitlink": "Not Provided"
   },
   {
     "id": 11,
